# qij-ai-media-clib

./: .gitignore  CMakeLists.txt  Makefile  check_mem.sh  cp.sh  main.cc  main.py  main_jpg.py  main_jpg_box1.py  old-Makefile  running.sh  scp-py.sh
config/: config.json
medialib/: Makefile  Makefile-box1  cp.sh  libqjmedia.d
medialib/common/: common.h  err_code.h  system_inc.h  user_inc.h
medialib/common/log/: mylog.cc  mylog.h
medialib/common/logs/: Loggers.cpp  Loggers.h
medialib/common/mydef/: mydef.cc  mydef.h  typedef.h
medialib/common/utils/cache/: shared_data.cc  shared_data.h
medialib/common/utils/queue/redis/: redis_queue.cc  redis_queue.h
medialib/common/utils/sync_task/: async_task.cc  async_task.h  base_sync_task.h
medialib/init/: config.cc  config.h  init_data.h
medialib/media_func/: base_media.cc  base_media.h  data_def.h  user_media_api.cc  user_media_api.h
medialib/media_func/decode/: base_decode.cc  base_decode.h  cpu_decode.cc  cpu_decode.h  decode_temp.h  vpu_decode.cc  vpu_decode.h
medialib/media_func/media_utils/: media_param.h
medialib/media_func/media_utils/jpg/: jpg.cc  jpg.h
medialib/media_func/media_utils/yuv/: yuv.cc  yuv.h
